# iui_kdtree

./: .gitignore  CMakeLists.txt  README.md  raport.odt
src/: dryBeansReader.hpp  main.cpp  mnistReader.hpp
src/kdtree/: Vec.hpp  hyperbox.hpp  kdtree.hpp  knn.hpp  metrics.hpp  pca.hpp
